# jac-vision

./: .gitignore
vision-ms/: .gitignore  README.md  pyproject.toml  requirements.txt
vision-ms/src/: main.py
vision-ms/src/config/: settings.yml
vision-ms/src/face_identification/dto/: api_dto.py  person_dto.py
vision-ms/src/face_identification/messaging/: consumer.py  rabbit_manager.py
vision-ms/src/face_identification/recognition/: face_engine.py
vision-ms/src/face_identification/services/: person_service.py
vision-ms/src/face_recognition/dto/: person_dto.py
vision-ms/src/face_recognition/messaging/: consumer.py  rabbit_manager.py
vision-ms/src/face_recognition/recognition/: face_engine.py
vision-ms/src/face_recognition/repository/: person_repository.py
vision-ms/src/face_recognition/services/: person_service.py
vision-ms/src/face_registry/dto/: person_dto.py
vision-ms/src/face_registry/recognition/: face_engine.py
vision-ms/src/face_registry/repository/: person_repository.py
vision-ms/src/face_registry/services/: person_service.py
vision-ms/src/helpers/constants/: constants.py
vision-ms/src/helpers/dto/: api_dto.py
vision-ms/src/helpers/utils/: enums.py  logger.py  utils.py
vision-ms/src/ingest/dto/: ingest_dto.py
vision-ms/src/ingest/ingest/: manager.py  worker.py
vision-ms/src/ingest/publishers/: publisher.py
vision-ms/src/recordings/detection/: motion_detector.py
vision-ms/src/routers/: default_router.py  face_identification.py  face_registry_router.py  ingest_router.py  people_router.py  recordings_router.py
(+140 files in other folders)
